implemented light theme

--- a/src/app/components/helper/dropdown/dropdown.component.less
+++ b/src/app/components/helper/dropdown/dropdown.component.less
@@ -28,7 +28,7 @@
         position: absolute;
         right: 0;
         left: 0;
-        background: var(--primary-color);
+        background: var(--modal-bg-color);
         padding: 4px 0;
 
         border-radius: 4px;
@@ -39,7 +39,7 @@
             cursor: pointer;
 
             &:hover {
-                background: var(--secondary-hover-color);
+                background: var(--primary-bg-color);
             }
         }
     }
