--- a/src/app/components/helper/spinner/spinner.component.less
+++ b/src/app/components/helper/spinner/spinner.component.less
@@ -8,8 +8,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-  
-    background: var(--darkest-color-60);
+    background: var(--overlay-color);
     transition: opacity .4s ease-in;
 
     svg {
