--- a/src/app/components/root/root.component.less
+++ b/src/app/components/root/root.component.less
@@ -30,7 +30,7 @@ nav {
 }
 
 .nav-link {
-    color: var(--white-color);
+    color: var(--main-text-color);
     text-decoration: none;
     display: inline-block;
     font: var(--font-text-lg);
