--- a/src/app/components/helper/sign-form/sign-form.component.less
+++ b/src/app/components/helper/sign-form/sign-form.component.less
@@ -7,9 +7,9 @@
   position: relative;
   border-radius: 20px;
   overflow: hidden;
-  box-shadow: 0 0 3px 1px var(--primary-color);
+  //box-shadow: 0 0 3px 1px var(--modal-bg-color);
   padding: 24px 32px;
-  background: var(--primary-dark-color)
+  background: var(--modal-bg-color)
 }
 
 .form {
