--- a/src/styles.less
+++ b/src/styles.less
@@ -1,16 +1,13 @@
-@lightest-color: #F4F4F7;
-@light-color: #80B6B2;
-@primary-color: #005C71;
-@secondary-color: #5599B0;
-@thirdary-color: #337A90;
-@darkest-color: #2F4858;
+@dark-blue-green-color: #004256; //#005C71;
+@aquamarine-color: #337A90;
+
+@awesome-gray: #9ABDD1; //#7AB4D2; //#9BBED2
+@white-color: #fff;
+
 @red: #DA0037;
-@accent: #F69333;
-@accent: #9A7BA0;
-@awesome-gray: #9ABDD1;
-@primary-dark-color: #004256;
-//9BBED2 ligth btn outline  7AB4D2
-//#9A7BA0 fanny
+@orange: #F69333;
+@purple: #9A7BA0;
+
 html {
     --font-primary: 'Varela Round', sans-serif;
     --font-secondary: 'Comfortaa', cursive;
@@ -21,19 +18,49 @@ html {
     --font-h1: 700 36px/40px var(--font-secondary);
     --container-width: 1024px;
 
-    --lightest-color: @lightest-color;
-    --light-color: @light-color;
-    --primary-color: @primary-color;
-    --primary-dark-color: @primary-dark-color;
-    --secondary-color: @secondary-color;
-    --secondary-hover-color: @thirdary-color;
-    --darkest-color: @darkest-color;
-    --darkest-color-60: fade(@darkest-color, 60%);
     --red-color: @red;
-    --accent-color: @accent;
-    --accent-color-70: fade(@accent, 70%);
+    --orange-color: @orange;
+    --accent-color: @orange;
 
-    --awesome-gray: @awesome-gray;
+    &.dark {
+        @primary-bg-color: darken(@aquamarine-color, 20%);
+        --primary-bg-color: @primary-bg-color;
+        --overlay-color: fade(@primary-bg-color, 40%);
+
+        --modal-bg-color: darken(@aquamarine-color, 15%);
+
+        --main-text-color: @awesome-gray;
+        --heading-color: mix(@aquamarine-color, @awesome-gray, 40%);
+
+        @btn-primary-bg: mix(@aquamarine-color, @awesome-gray, 80%);
+        --border-color: @btn-primary-bg;
+        --btn-primary-bg: @btn-primary-bg;
+        --primary-bg-color-hover: lighten(@btn-primary-bg, 5%);
+        --primary-bg-color-focus: saturate(@btn-primary-bg, 10%);
+
+        --placeholder-color: fade(@awesome-gray, 30%);
+        --table-bg-10: fade(@awesome-gray, 10%);
+    }
+
+    &.light {
+        @primary-bg-color: lighten(@aquamarine-color, 50%);
+        --primary-bg-color: @primary-bg-color;
+        --overlay-color: fade(@primary-bg-color, 40%);
+
+        --modal-bg-color: lighten(@aquamarine-color, 40%);
+
+        --main-text-color: darken(@aquamarine-color, 20%);
+        --heading-color: @aquamarine-color;
+
+        @btn-primary-bg: mix(@aquamarine-color, @awesome-gray, 90%);
+        --border-color: @btn-primary-bg;
+        --btn-primary-bg: @btn-primary-bg;
+        --primary-bg-color-hover: darken(@btn-primary-bg, 5%);
+        --primary-bg-color-focus: saturate(@btn-primary-bg, 5%);
+    
+        --placeholder-color: fade(@aquamarine-color, 80%);
+        --table-bg-10: fade(@aquamarine-color, 10%);
+    }
 }
 
 * {
@@ -47,8 +74,8 @@ html {
 body {
     margin: 0;
     height: 100%;
-    background: var(--darkest-color);
-    color: var(--lightest-color);
+    background: var(--primary-bg-color);
+    color: var(--main-text-color);
     font: var(--font-main-text);
 }
 
@@ -61,9 +88,7 @@ body {
 h1,
 h2,
 h3 {
-    color: var(--lightest-color);
-    color: var(--accent-color);
-    color: var(--awesome-gray);
+    color: var(--heading-color)
 }
 
 h1 {
@@ -91,36 +116,36 @@ h3 {
     }
 
     &--primary {
-        background: var(--primary-color);
-        border: 2px solid var(--primary-color);
-        color: var(--lightest-color);
-  
+        background: var(--btn-primary-bg);
+        border: 2px solid var(--border-color);
+        color: var(--primary-bg-color);
+
         &:hover {
-            background: var(--secondary-hover-color);
-            border-color: var(--secondary-hover-color);
+            background: var(--primary-bg-color-hover);
+            border-color: var(--primary-bg-color-hover);
         }
 
         &:focus:active {
-            background: var(--secondary-color);
-            border-color: var(--secondary-color);
+            background: var(--primary-bg-color-focus);
+            border-color: var(--primary-bg-color-focus);
         }
     }
 
     &--primary-outline {
-        color: var(--awesome-gray);
+        color: var(--border-color);
         background: transparent;
-        border: 2px solid var(--awesome-gray);
+        border: 2px solid var(--border-color);
 
         &:hover {
-            background: var(--awesome-gray);
-            border-color: var(--awesome-gray);
-            color: var(--primary-color);
+            background: var(--btn-primary-bg);
+            border-color: var(--border-color);
+            color: var(--primary-bg-color);
         }
 
         &:focus:active {
-            background: var(--secondary-color);
-            border-color: var(--secondary-color);
-            color: var(--lightest-color);
+            background: var(--primary-bg-color-focus);
+            border-color: var(--primary-bg-color-focus);
+            color: var(--primary-bg-color);
         }
     }
 
@@ -141,9 +166,9 @@ h3 {
     line-height: 20px;
     width: 100%;
     border: 0;
-    border-bottom: 2px solid var(--secondary-color);
+    border-bottom: 2px solid var(--border-color);
     background: none;
-    color: var(--lightest-color);
+    color: var(--main-text-color);
     outline: none;
     font-family: var(--font-primary);
 
@@ -153,12 +178,12 @@ h3 {
     }
 
     &::placeholder {
-        color: var(--primary-color);
+        color: var(--placeholder-color);
     }
 
     &:focus,
     &:focus-visible {
-        border-bottom: 2px solid var(--primary-color);
+        border-bottom: 2px solid var(--main-text-color);
     }
 
     &:-webkit-autofill,
@@ -168,7 +193,7 @@ h3 {
 
     &--error {
         border-image-slice: 1;
-        border-image-source: linear-gradient(to right, var(--red-color), var(--secondary-color));
+        border-image-source: linear-gradient(to right, var(--red-color), var(--border-color));
     }
 }
 
@@ -194,17 +219,17 @@ h3 {
 }
 
 .link-primary {
-    color: var(--secondary-color);
+    color: var(--heading-color);
     display: inline-flex;
     justify-content: center;
     align-items: center;
     text-decoration: none;
 
     &:hover {
-        color: var(--secondary-hover-color);
+        color: var(--primary-bg-color-hover);
     }
 
     &:focus:active {
-        color: var(--primary-color);
+        color: var(--primary-bg-color-focus);
     }
 }
