--- a/src/app/components/entity-details/entity-details.component.html
+++ b/src/app/components/entity-details/entity-details.component.html
@@ -1,59 +1,75 @@
-<div class="entity-details__main">
-
+<section>
     <h1>
         {{quest.title}}
-        <span *ngIf="quest.status === 'draft'" class="label">{{quest.status}}</span>
+        <span *ngIf="quest.status === 'draft'" class="tag">{{quest.status}}</span>
     </h1>
 
     <div>
-        <a (click)="goToAnchor1()" class="link-primary">
+        <a class="link-accent" href="#" (click)="scrollToIdRef($event, feedbacks)">
             Feedback
             <app-svg-icon icon="starFilled" [size]="18"></app-svg-icon>{{quest.rating}}
         </a>
     </div>
-
-
+</section>
+<section>
     <p>
-        complexity: <app-complexity-level [level]="quest.complexity"></app-complexity-level>
+        <app-complexity-level [level]="quest.complexity"></app-complexity-level>
     </p>
+    <p>
+        {{quest.description}}
+    </p>
+</section>
 
-    <p>{{quest.description}}</p>
-
-    <div class="feedbacks" id="feedback">
-        <div class="feedbacks__header">
-            <h3>Feedback</h3>
-        </div>
-        <div class="feedbacks__item">
-            <div class="sender">John Dou</div>
-            <div class="rating">
-                <ng-container *ngFor="let _ of [].constructor(4)">
-                    <app-svg-icon icon="starFilled" [size]="18"></app-svg-icon>
-                </ng-container>
-            </div>
-            <div class="text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo, facere! Quia quam, odit
-                quisquam, cumque eius quod repudiandae labore sint eligendi enim esse. Quis, at animi numquam sapiente
-                nobis iusto.
-            </div>
-        </div>
-        <div class="feedbacks__item">
-            <div class="sender">John Dou</div>
-            <div class="rating">
-                <ng-container *ngFor="let _ of [].constructor(4)">
-                    <app-svg-icon icon="starFilled" [size]="18"></app-svg-icon>
-                </ng-container>
-            </div>
-            <div class="text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo, facere! Quia quam, odit
-                quisquam, cumque eius quod repudiandae labore sint eligendi enim esse. Quis, at animi numquam sapiente
-                nobis iusto.
-            </div>
-        </div>
+<section class="section">
+    <div class="section__header">
+        <h3>Galery</h3>
     </div>
-
-</div>
-<div class="entity-details__aside">
     <div>
         <img [src]="quest.banner" alt="banner" width="350">
     </div>
-</div>
+</section>
+
+<section class="section" #feedbacks>
+    <div class="section__header">
+        <h3>Feedback</h3>
+    </div>
+    <div class="feedback">
+        <div class="feedback__header">
+            <div>
+                <span class="feedback__sender"> John Dou </span>
+                {{date | date: 'short'}}
+            </div>
+
+            <div class="feedback__rating">
+                <ng-container *ngFor="let _ of [].constructor(4)">
+                    <app-svg-icon icon="starFilled" [size]="18"></app-svg-icon>
+                </ng-container>
+            </div>
+        </div>
+
+        <div class="feedback__text">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo, facere! Quia quam, odit
+            quisquam, cumque eius quod repudiandae labore sint eligendi enim esse. Quis, at animi numquam sapiente
+            nobis iusto.
+        </div>
+    </div>
+    <div class="feedback">
+        <div class="feedback__header">
+            <div>
+                <span class="feedback__sender"> John Dou </span>
+                {{date | date: 'short'}}
+            </div>
+
+            <div class="feedback__rating">
+                <ng-container *ngFor="let _ of [].constructor(4)">
+                    <app-svg-icon icon="starFilled" [size]="18"></app-svg-icon>
+                </ng-container>
+            </div>
+        </div>
+        <div class="feedback__text">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo, facere! Quia quam, odit
+            quisquam, cumque eius quod repudiandae labore sint eligendi enim esse. Quis, at animi numquam sapiente
+            nobis iusto.
+        </div>
+    </div>
+</section>
