--- a/src/app/components/entity-details/entity-details.component.less
+++ b/src/app/components/entity-details/entity-details.component.less
@@ -1,39 +1,50 @@
 :host {
-    display: flex;
     width: 100%;
 }
-.entity-details{
-    &__main {
-        flex: 1;
-        margin-right: 16px;
-    }
-}
 
-.link-primary {
-    color: var(--orange-color);
-    text-decoration: underline;
-}
-.label {
+.tag {
     background: var(--heading-color);
     color: var(--primary-bg-color);
     font: var(--font-btn);
     padding: 6px 12px;
     vertical-align: middle;
     text-transform: uppercase;
-}
-.rating {
-    color: var(--orange-color);
-    display: flex;
+    border-radius: 6px;
 }
 
-.feedbacks {
-    padding: 40px 0;
 
-    &__item {
-        padding: 20px;
-        border: 1px solid;
-        padding: 16px;
-        border-radius: 6px;
-        margin-top: 16px;
+.feedback {
+    padding: 20px;
+    border: 1px solid;
+    padding: 16px 24px;
+    border-radius: 6px;
+    margin-top: 16px;
+    &__rating {
+        color: var(--orange-color);
+        display: flex;
+        margin-left: auto;
+        align-items: baseline;
+    }
+    &__header {
+        display: flex;
+        margin-bottom: 8px;
+    }
+
+    &__sender {
+        margin-right: 16px;
+    }
+    
+}
+
+.section {
+    padding: 20px 0;
+
+    &__header {
+        margin-bottom: 20px;
+    }
+}
+.link-accent {
+    ::ng-deep svg {
+        margin-left: 8px;
     }
 }
