--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -5,8 +5,8 @@
 <app-spinner *ngIf="loading"></app-spinner>
 <div class="form__field search-field">
     <app-svg-icon icon="search" [size]="16" class="search-field__search-icon"></app-svg-icon>
-    <input class="form-control" placeholder="Search...">
-    <button class="btn btn--primary btn--sm search-field__filter-btn">
+    <input class="form-control" placeholder="Search..." [(ngModel)]='searchTerm' name='searchTerm' type="search">
+    <button class="btn btn--primary btn--sm search-field__filter-btn" (click)="openFilterDlg()">
         <app-svg-icon icon="filter" [size]="16"></app-svg-icon>
     </button>
 </div>
@@ -42,7 +42,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let user of users | sortByRole:direction:column:type; let i = index">
+        <tr *ngFor="let user of users | searchFilter:searchTerm | sortByRole:direction:column:type; let i = index">
             <td>{{i + 1}}</td>
             <td *ngFor="let col of config">
                 <ng-container [ngSwitch]="col.type">
