--- a/src/app/components/workspace/workspace.component.html
+++ b/src/app/components/workspace/workspace.component.html
@@ -14,15 +14,15 @@
     <div *ngFor="let quest of quests" class="quest-section__item quest"
         [ngClass]="{'status-draft': quest.status === 'draft'}">
         <div class="quest__banner" [ngStyle]="{'background-image': 'url(' + quest.banner + ')'}">
-            <a routerLink="/entity/{{quest.id}}" class="quest-link"></a>
         </div>
         <div class="quest__hidden-content">
             <p class="rating">
                 <app-svg-icon icon="starFilled" [size]="18"></app-svg-icon>
                 <span class="rating__number">{{quest.rating}}</span>
             </p>
-            <p>{{quest.description}}</p>
+            <p class="truncated-text">{{quest.description}}</p>
         </div>
+        <a routerLink="/entity/{{quest.id}}" class="quest-link"></a>
         <div class="quest__header">
             <h3>{{quest.title}}</h3>
             <app-complexity-level [level]="quest.complexity"></app-complexity-level>
