--- a/src/app/components/workspace/workspace.component.less
+++ b/src/app/components/workspace/workspace.component.less
@@ -113,8 +113,20 @@
         font: var(--font-sign);
     }
 }
+
 .quest-link {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+}
+
+.truncated-text {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    line-clamp: 3;
+    -webkit-box-orient: vertical;
 }
