refactored, landing has been updated

--- a/src/app/components/entity-details/entity-details.component.html
+++ b/src/app/components/entity-details/entity-details.component.html
@@ -29,6 +29,15 @@
     </div>
 </section>
 
+<section class="section">
+    <div class="section__header">
+        <h3>Booking</h3>
+    </div>
+    <div>
+        The feature will be implemented soon..
+    </div>
+</section>
+
 <section class="section" #feedbacks>
     <div class="section__header">
         <h3>Feedback</h3>
