--- a/src/styles.less
+++ b/src/styles.less
@@ -7,6 +7,8 @@
 @red: #DA0037;
 @orange: #F69333;
 @purple: #9A7BA0;
+@violet: #633f88;
+@green: #367e6d;
 
 html {
     --font-primary: 'Varela Round', sans-serif;
@@ -21,6 +23,9 @@ html {
     --red-color: @red;
     --orange-color: @orange;
     --accent-color: @orange;
+
+    --violet-color: @violet;
+    --green-color: @green;
 
     &.dark {
         @primary-bg-color: darken(@aquamarine-color, 20%);
